--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.5",
     "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^6.30.0"
