--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.7.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.5",
     "date-fns": "^4.1.0",
@@ -18,7 +19,9 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.3",
-    "react-router-dom": "^6.30.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.30.0",
+    "sweetalert2": "^11.19.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
