--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
+    "axios": "^1.9.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.5",
     "date-fns": "^4.1.0",
