--- a/package.json
+++ b/package.json
@@ -5,16 +5,25 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "jest --watchAll",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
     "@reduxjs/toolkit": "^2.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^29.5.14",
     "axios": "^1.9.0",
+    "babel-jest": "^29.7.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "react": "^19.0.0",
     "react-big-calendar": "^1.18.0",
     "react-datepicker": "^8.3.0",
